--- a/cs103_project/cs103_project.vcxproj
+++ b/cs103_project/cs103_project.vcxproj
@@ -127,15 +127,16 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="admin.cpp" />
+    <ClCompile Include="Administrator.cpp" />
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="menu.cpp" />
-    <ClCompile Include="user.cpp" />
+    <ClCompile Include="User.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="admin.h" />
-    <ClInclude Include="menu.h" />
-    <ClInclude Include="user.h" />
+    <ClInclude Include="Administrator.h" />
+    <ClInclude Include="LunchOrder.h" />
+    <ClInclude Include="MenuItem.h" />
+    <ClInclude Include="User.h" />
+    <ClInclude Include="UserType.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
